--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -11974,7 +11974,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 352, 257, 50, 14
 }
 
-LALBPRV_1 DIALOG DISCARDABLE 135, 103, 905, 238
+LALBPRV_1 DIALOG DISCARDABLE 135, 103, 399, 238
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
@@ -11985,9 +11985,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 113, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 26, 65, 11
   CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 64, 38, 65, 11
   CONTROL "", 222, "Edit", WS_BORDER, 132, 38, 264, 11
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 64, 50, 65, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 64, 51, 65, 11
   CONTROL "", 232, "Edit", WS_BORDER, 132, 51, 264, 11
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 3, 14, 393, 80
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 3, 16, 393, 80
   CONTROL "", 130, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 99, 38, 11
   CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 112, 65, 11
   CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 125, 65, 11
@@ -12040,73 +12040,71 @@ FONT 8, "MS Sans Serif"
   CONTROL "Centro de coste", -1, "Static", WS_GROUP, 132, 206, 50, 8
 }
 
-LALBPRV_2 DIALOG DISCARDABLE 26, 35, 360, 396
+LALBPRV_2 DIALOG DISCARDABLE 26, 35, 360, 236
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
   CONTROL "Impuesto incluido", 90, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 12, 77, 10
-  CONTROL "", 80, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 91, 10, 28, 11
-  CONTROL "Guardar nuevos precios de compra", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 7, 34, 130, 10
-  CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 7, 62, 68, 10
-  CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 7, 74, 49, 10
-  CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 7, 86, 71, 10
-  CONTROL "", 370, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 99, 60, 12
-  CONTROL "", 371, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 153, 99, 40, 12
-  CONTROL "Línea facturada", 360, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 7, 124, 64, 10
-  CONTROL "", 361, "Edit", WS_BORDER|WS_GROUP, 91, 123, 91, 12
-  CONTROL "", 230, "Edit", ES_RIGHT|WS_BORDER|WS_GROUP, 90, 262, 91, 12
-  CONTROL "", 500, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 75, 288, 10, 12
-  CONTROL "", 510, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 288, 38, 12
-  CONTROL "", 520, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 288, 49, 33
-  CONTROL "", 530, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 288, 70, 12
-  CONTROL "", 540, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 279, 288, 70, 12
-  CONTROL "", IDOK, "Button", BS_AUTOCHECKBOX, 75, 302, 10, 12
-  CONTROL "", 560, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 302, 38, 12
-  CONTROL "", 570, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 302, 49, 33
-  CONTROL "", 580, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 302, 70, 12
-  CONTROL "", 590, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 279, 302, 70, 12
-  CONTROL "", 600, "Button", BS_AUTOCHECKBOX, 75, 316, 10, 12
-  CONTROL "", 610, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 316, 38, 12
-  CONTROL "", 620, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 316, 49, 33
-  CONTROL "", 630, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 316, 70, 12
-  CONTROL "", 640, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 279, 316, 70, 12
-  CONTROL "", 650, "Button", BS_AUTOCHECKBOX, 75, 330, 10, 12
-  CONTROL "", 660, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 90, 330, 38, 12
-  CONTROL "", 670, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 330, 49, 33
-  CONTROL "", 680, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 330, 70, 12
-  CONTROL "", 690, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 279, 330, 70, 12
-  CONTROL "", 700, "Button", BS_AUTOCHECKBOX, 75, 344, 10, 12
-  CONTROL "", 710, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 344, 38, 12
-  CONTROL "", 720, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 344, 49, 33
-  CONTROL "", 730, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 344, 70, 12
-  CONTROL "", 740, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 279, 344, 70, 12
-  CONTROL "", 750, "Button", BS_AUTOCHECKBOX, 75, 358, 10, 12
-  CONTROL "", 760, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 358, 38, 12
-  CONTROL "", 770, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 358, 49, 33
-  CONTROL "", 780, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 358, 70, 12
-  CONTROL "", 790, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 279, 358, 70, 12
+  CONTROL "", 80, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 90, 10, 28, 11
+  CONTROL "", 230, "Edit", ES_RIGHT|WS_BORDER|WS_GROUP, 90, 35, 91, 12
+  CONTROL "", 500, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 75, 61, 10, 12
+  CONTROL "", 510, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 61, 38, 12
+  CONTROL "", 520, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 61, 49, 33
+  CONTROL "", 530, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 61, 70, 12
+  CONTROL "", 540, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 279, 61, 70, 12
+  CONTROL "", IDOK, "Button", BS_AUTOCHECKBOX, 75, 75, 10, 12
+  CONTROL "", 560, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 75, 38, 12
+  CONTROL "", 570, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 75, 49, 33
+  CONTROL "", 580, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 75, 70, 12
+  CONTROL "", 590, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 279, 75, 70, 12
+  CONTROL "", 600, "Button", BS_AUTOCHECKBOX, 75, 89, 10, 12
+  CONTROL "", 610, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 89, 38, 12
+  CONTROL "", 620, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 89, 49, 33
+  CONTROL "", 630, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 89, 70, 12
+  CONTROL "", 640, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 279, 89, 70, 12
+  CONTROL "", 650, "Button", BS_AUTOCHECKBOX, 75, 103, 10, 12
+  CONTROL "", 660, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 90, 103, 38, 12
+  CONTROL "", 670, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 103, 49, 33
+  CONTROL "", 680, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 103, 70, 12
+  CONTROL "", 690, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 279, 103, 70, 12
+  CONTROL "", 700, "Button", BS_AUTOCHECKBOX, 75, 117, 10, 12
+  CONTROL "", 710, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 117, 38, 12
+  CONTROL "", 720, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 117, 49, 33
+  CONTROL "", 730, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 117, 70, 12
+  CONTROL "", 740, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 279, 117, 70, 12
+  CONTROL "", 750, "Button", BS_AUTOCHECKBOX, 75, 131, 10, 12
+  CONTROL "", 760, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 131, 38, 12
+  CONTROL "", 770, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 131, 49, 33
+  CONTROL "", 780, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 131, 70, 12
+  CONTROL "", 790, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 279, 131, 70, 12
+  CONTROL "Guardar nuevos precios de compra", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 150, 130, 10
+  CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 8, 177, 68, 10
+  CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 8, 189, 49, 10
+  CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 8, 201, 71, 10
+  CONTROL "", 370, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 75, 214, 63, 12
+  CONTROL "", 371, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 140, 214, 40, 12
+  CONTROL "", 361, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_GROUP, 270, 214, 81, 12
   CONTROL "Impuestos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 1, 352, 24
-  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 254, 352, 136
-  CONTROL "Precio de compra", -1, "Static", WS_GROUP, 7, 265, 65, 8
-  CONTROL "Precio 1", -1, "Static", WS_GROUP, 7, 290, 30, 10
-  CONTROL "Precio 2", -1, "Static", WS_GROUP, 7, 304, 30, 10
-  CONTROL "Precio 3", -1, "Static", WS_GROUP, 7, 318, 30, 10
-  CONTROL "Precio 4", -1, "Static", WS_GROUP, 7, 332, 30, 10
-  CONTROL "Precio 5", -1, "Static", WS_GROUP, 7, 346, 30, 10
-  CONTROL "Precio 6", -1, "Static", WS_GROUP, 7, 360, 30, 10
-  CONTROL "%Beneficio", -1, "Button", BS_GROUPBOX, 46, 278, 139, 96
-  CONTROL "Neto", -1, "Button", BS_GROUPBOX, 189, 278, 82, 96
-  CONTROL "Impuestos incluidos", -1, "Button", BS_GROUPBOX, 273, 278, 82, 96
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 290, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 304, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 318, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 332, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 346, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 360, 23, 10
-  CONTROL "Stock", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 51, 352, 64
-  CONTROL "Fecha valor stock", -1, "Static", WS_GROUP, 7, 101, 60, 10
-  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 27, 352, 21
-  CONTROL "", 4001, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 117, 352, 21
+  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 27, 352, 136
+  CONTROL "Precio de compra", -1, "Static", WS_GROUP, 7, 38, 65, 8
+  CONTROL "Precio 1", -1, "Static", WS_GROUP, 8, 63, 30, 10
+  CONTROL "Precio 2", -1, "Static", WS_GROUP, 8, 77, 30, 10
+  CONTROL "Precio 3", -1, "Static", WS_GROUP, 8, 91, 30, 10
+  CONTROL "Precio 4", -1, "Static", WS_GROUP, 8, 105, 30, 10
+  CONTROL "Precio 5", -1, "Static", WS_GROUP, 8, 119, 30, 10
+  CONTROL "Precio 6", -1, "Static", WS_GROUP, 8, 133, 30, 10
+  CONTROL "%Beneficio", -1, "Button", BS_GROUPBOX, 46, 51, 139, 96
+  CONTROL "Neto", -1, "Button", BS_GROUPBOX, 189, 51, 82, 96
+  CONTROL "Impuestos incluidos", -1, "Button", BS_GROUPBOX, 273, 51, 82, 96
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 63, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 77, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 91, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 105, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 119, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 133, 23, 10
+  CONTROL "Stock", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 166, 352, 64
+  CONTROL "Fecha valor stock", -1, "Static", WS_GROUP, 8, 216, 60, 10
+  CONTROL "Línea facturada", 360, "Button", NOT WS_VISIBLE|BS_AUTOCHECKBOX|WS_TABSTOP, 195, 216, 64, 10
 }
 
 LALBPRV_3 DIALOG DISCARDABLE 26, 35, 360, 261
