almacén origen en rectificativas

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -576,13 +576,13 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 245, 30, 110, 11
-  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 245, 43, 225, 11
+  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 245, 43, 219, 11
   CONTROL "", 104, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 245, 56, 110, 11
-  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 245, 69, 225, 11
+  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 245, 69, 219, 11
   CONTROL "", 102, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 245, 82, 53, 11
-  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 300, 82, 170, 11
+  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 300, 82, 164, 11
   CONTROL "", 107, "Edit", WS_BORDER|WS_TABSTOP, 245, 95, 99, 11
-  CONTROL "", 106, "Edit", WS_BORDER, 380, 95, 90, 11
+  CONTROL "", 106, "Edit", WS_BORDER, 380, 95, 84, 11
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 508, 30, 50, 11
   CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 560, 30, 102, 11
   CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 508, 43, 50, 11
@@ -622,7 +622,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 135, "Edit", WS_BORDER|WS_TABSTOP, 94, 82, 100, 11
   CONTROL "", 136, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 94, 95, 100, 11
   CONTROL "Proveedor", -1, "Static", WS_GROUP, 198, 33, 45, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 474, 33, 33, 8
+  CONTROL "Alm. Destino", -1, "Static", WS_GROUP, 466, 33, 39, 8
   CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 46, 25, 8
   CONTROL "Número", -1, "Static", WS_GROUP, 44, 33, 30, 8
   CONTROL "Pedido", -1, "Static", WS_GROUP, 44, 58, 27, 8
@@ -633,9 +633,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "CP/Población", -1, "Static", WS_GROUP, 198, 85, 45, 8
   CONTROL "N.I.F.", -1, "Static", WS_GROUP, 198, 58, 45, 8
   CONTROL "Provincia", -1, "Static", WS_GROUP, 198, 98, 45, 8
-  CONTROL "Pago", -1, "Static", WS_GROUP, 474, 59, 22, 8
-  CONTROL "Caja", -1, "Static", WS_GROUP, 474, 72, 19, 8
-  CONTROL "Divisa", -1, "Static", WS_GROUP, 474, 85, 25, 8
+  CONTROL "Pago", -1, "Static", WS_GROUP, 466, 59, 22, 8
+  CONTROL "Caja", -1, "Static", WS_GROUP, 466, 72, 19, 8
+  CONTROL "Divisa", -1, "Static", WS_GROUP, 466, 85, 25, 8
   CONTROL "%", 701, "Static", WS_GROUP, 186, 309, 8, 8
   CONTROL "%", 702, "Static", WS_GROUP, 186, 322, 8, 8
   CONTROL "Teléfono", -1, "Static", WS_GROUP, 348, 98, 30, 8
@@ -652,7 +652,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Fecha su alb.", -1, "Static", WS_GROUP, 44, 98, 48, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Albaranes de proveedores", -1, "Static", WS_GROUP, 44, 3, 120, 8
-  CONTROL "Origen", 342, "Static", WS_GROUP, 474, 46, 26, 8
+  CONTROL "Alm. Origen", 342, "Static", WS_GROUP, 466, 46, 39, 8
   CONTROL "0", 403, "Static", SS_RIGHT|WS_GROUP, 595, 308, 65, 8
   CONTROL "Imp. especiales", -1, "Static", WS_GROUP, 540, 309, 54, 8
 }
@@ -6836,12 +6836,12 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 242, 30, 90, 11
-  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 242, 42, 200, 11
+  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 242, 42, 196, 11
   CONTROL "", 106, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 242, 54, 90, 11
-  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 242, 66, 200, 11
+  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 242, 66, 196, 11
   CONTROL "", 104, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 242, 78, 58, 11
-  CONTROL "", 105, "Edit", WS_BORDER|WS_TABSTOP, 302, 78, 140, 11
-  CONTROL "", 108, "Edit", WS_BORDER|WS_TABSTOP, 242, 90, 200, 11
+  CONTROL "", 105, "Edit", WS_BORDER|WS_TABSTOP, 302, 78, 136, 11
+  CONTROL "", 108, "Edit", WS_BORDER|WS_TABSTOP, 242, 90, 196, 11
   CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER, 242, 102, 90, 11
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 482, 30, 70, 11
   CONTROL "", 151, "Edit", WS_BORDER, 554, 30, 108, 11
@@ -6859,7 +6859,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 482, 90, 70, 11
   CONTROL "", 166, "Edit", WS_BORDER, 554, 90, 108, 11
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 482, 102, 70, 11
-  CONTROL "", 171, "TBitMap", 0x00800000, 554, 102, 19, 11
+  CONTROL "", 171, "TBitmap", 0x00800000, 554, 102, 19, 11
   CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 575, 102, 87, 11
   CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 84, 102, 101, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 115, 50, 14
@@ -6903,10 +6903,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "N.I.F.", -1, "Static", WS_GROUP, 192, 57, 23, 8
   CONTROL "Provincia", -1, "Static", WS_GROUP, 192, 93, 35, 8
   CONTROL "Teléfono", -1, "Static", WS_GROUP, 192, 105, 33, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 450, 33, 31, 8
-  CONTROL "Pago", -1, "Static", WS_GROUP, 450, 57, 31, 8
-  CONTROL "Caja", -1, "Static", WS_GROUP, 450, 93, 31, 8
-  CONTROL "Divisa", -1, "Static", WS_GROUP, 450, 105, 31, 8
+  CONTROL "Alm. Destino", -1, "Static", WS_GROUP, 440, 32, 39, 8
+  CONTROL "Pago", -1, "Static", WS_GROUP, 440, 57, 31, 8
+  CONTROL "Caja", -1, "Static", WS_GROUP, 440, 93, 31, 8
+  CONTROL "Divisa", -1, "Static", WS_GROUP, 440, 105, 31, 8
   CONTROL "%", 701, "Static", WS_GROUP, 179, 308, 8, 8
   CONTROL "%", 702, "Static", WS_GROUP, 179, 320, 8, 8
   CONTROL "%", 703, "Static", WS_GROUP, 179, 332, 8, 8
@@ -6946,13 +6946,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 624, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 369, 320, 60, 11
   CONTROL "% R.E. 3", 716, "Static", WS_GROUP, 285, 323, 33, 8
   CONTROL "NFC", -1, "Static", WS_GROUP, 44, 45, 35, 8
-  CONTROL "Banco", -1, "Static", WS_GROUP, 450, 69, 31, 8
-  CONTROL "IBAN", -1, "Static", WS_GROUP, 450, 81, 31, 8
+  CONTROL "Banco", -1, "Static", WS_GROUP, 440, 69, 31, 8
+  CONTROL "IBAN", -1, "Static", WS_GROUP, 440, 81, 31, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Facturas a proveedores", -1, "Static", WS_GROUP, 44, 3, 120, 8
   CONTROL "0", 403, "Static", SS_RIGHT|WS_GROUP, 557, 305, 100, 8
   CONTROL "Imp. especiales", -1, "Static", WS_GROUP, 501, 306, 54, 8
-  CONTROL "Origen", 342, "Static", WS_GROUP, 449, 45, 31, 8
+  CONTROL "Alm. Origen", 342, "Static", WS_GROUP, 440, 45, 39, 8
 }
 
 FACPRV_2 DIALOG DISCARDABLE 29, 33, 670, 375
@@ -16573,38 +16573,40 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 246, 30, 95, 11
-  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 246, 42, 200, 11
-  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 246, 54, 200, 11
+  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 246, 42, 197, 11
+  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 246, 54, 197, 11
   CONTROL "", 106, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 246, 66, 95, 11
   CONTROL "", 104, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 246, 78, 58, 11
-  CONTROL "", 105, "Edit", WS_BORDER|WS_TABSTOP, 306, 78, 139, 11
-  CONTROL "", 108, "Edit", WS_BORDER|WS_TABSTOP, 246, 90, 95, 11
-  CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER, 374, 90, 71, 11
+  CONTROL "", 105, "Edit", WS_BORDER|WS_TABSTOP, 306, 78, 137, 11
+  CONTROL "", 108, "Edit", WS_BORDER|WS_TABSTOP, 246, 90, 197, 11
+  CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER, 246, 102, 95, 11
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 488, 30, 70, 11
   CONTROL "", 151, "Edit", WS_BORDER, 560, 30, 108, 11
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 488, 42, 70, 11
-  CONTROL "", 161, "Edit", WS_BORDER, 560, 42, 108, 11
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 488, 54, 180, 11
-  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 488, 66, 18, 11
-  CONTROL "", 302, "Edit", WS_BORDER|WS_TABSTOP, 507, 66, 18, 11
-  CONTROL "", 303, "Edit", WS_BORDER|WS_TABSTOP, 526, 66, 28, 11
-  CONTROL "", 304, "Edit", WS_BORDER|WS_TABSTOP, 555, 66, 28, 11
-  CONTROL "", 305, "Edit", WS_BORDER|WS_TABSTOP, 584, 66, 18, 11
-  CONTROL "", 306, "Edit", WS_BORDER|WS_TABSTOP, 603, 66, 65, 11
-  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 488, 78, 70, 11
-  CONTROL "", 166, "Edit", WS_BORDER, 560, 78, 108, 11
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 488, 90, 70, 11
-  CONTROL "", 171, "TBitmap", 0x00800000, 559, 90, 19, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 581, 90, 87, 11
+  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 488, 42, 70, 11
+  CONTROL "", 341, "Edit", WS_BORDER, 560, 42, 108, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 488, 54, 70, 11
+  CONTROL "", 161, "Edit", WS_BORDER, 560, 54, 108, 11
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 488, 66, 180, 11
+  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 488, 78, 18, 11
+  CONTROL "", 302, "Edit", WS_BORDER|WS_TABSTOP, 507, 78, 18, 11
+  CONTROL "", 303, "Edit", WS_BORDER|WS_TABSTOP, 526, 78, 28, 11
+  CONTROL "", 304, "Edit", WS_BORDER|WS_TABSTOP, 555, 78, 28, 11
+  CONTROL "", 305, "Edit", WS_BORDER|WS_TABSTOP, 584, 78, 18, 11
+  CONTROL "", 306, "Edit", WS_BORDER|WS_TABSTOP, 603, 78, 65, 11
+  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 488, 90, 70, 11
+  CONTROL "", 166, "Edit", WS_BORDER, 560, 90, 108, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 488, 102, 70, 11
+  CONTROL "", 171, "TBitmap", 0x00800000, 559, 102, 19, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 581, 102, 87, 11
   CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 91, 78, 100, 11
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 105, 50, 14
-  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 99, 105, 50, 14
-  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 154, 105, 50, 14
-  CONTROL "&Zoom", 503, "Button", WS_TABSTOP, 209, 105, 50, 14
-  CONTROL "S&ubir", 524, "Button", WS_TABSTOP, 264, 105, 50, 14
-  CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 319, 105, 50, 14
-  CONTROL "", 190, "TXBrowse", WS_TABSTOP|0x00300000, 44, 121, 617, 167
-  CONTROL "", 290, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 86, 105, 575, 183
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 116, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 99, 116, 50, 14
+  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 154, 116, 50, 14
+  CONTROL "&Zoom", 503, "Button", WS_TABSTOP, 209, 116, 50, 14
+  CONTROL "S&ubir", 524, "Button", WS_TABSTOP, 264, 116, 50, 14
+  CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 319, 116, 50, 14
+  CONTROL "", 190, "TXBrowse", WS_TABSTOP|0x00300000, 44, 132, 617, 156
+  CONTROL "", 290, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 86, 132, 575, 156
   CONTROL "", 199, "Edit", WS_BORDER|WS_TABSTOP, 49, 299, 83, 11
   CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 138, 299, 45, 11
   CONTROL "", 209, "Edit", WS_BORDER|WS_TABSTOP, 49, 312, 83, 11
@@ -16634,11 +16636,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "CP/Población", -1, "Static", WS_GROUP, 196, 81, 45, 8
   CONTROL "N.I.F.", -1, "Static", WS_GROUP, 196, 69, 45, 8
   CONTROL "Provincia", -1, "Static", WS_GROUP, 196, 93, 45, 8
-  CONTROL "Teléfono", -1, "Static", WS_GROUP, 342, 93, 30, 11
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 454, 33, 30, 8
-  CONTROL "Pago", -1, "Static", WS_GROUP, 454, 45, 30, 8
-  CONTROL "Caja", -1, "Static", WS_GROUP, 454, 81, 30, 8
-  CONTROL "Divisa", -1, "Static", WS_GROUP, 454, 93, 30, 8
+  CONTROL "Teléfono", -1, "Static", WS_GROUP, 196, 105, 30, 8
+  CONTROL "Alm. Destino", -1, "Static", WS_GROUP, 446, 33, 39, 8
+  CONTROL "Pago", -1, "Static", WS_GROUP, 446, 57, 30, 8
+  CONTROL "Caja", -1, "Static", WS_GROUP, 446, 93, 30, 8
+  CONTROL "Divisa", -1, "Static", WS_GROUP, 446, 105, 30, 8
   CONTROL "%", 701, "Static", WS_GROUP, 186, 301, 8, 8
   CONTROL "%", 702, "Static", WS_GROUP, 186, 314, 8, 8
   CONTROL "%", 703, "Static", WS_GROUP, 186, 326, 8, 8
@@ -16652,7 +16654,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 43, 290, 152, 77
   CONTROL "", 420, "Static", WS_GROUP, 503, 346, 49, 22
   CONTROL "0", 491, "Static", SS_RIGHT|WS_GROUP, 595, 333, 65, 8
-  CONTROL "Concepto", 707, "Static", WS_GROUP, 44, 104, 33, 8
+  CONTROL "Concepto", 707, "Static", WS_GROUP, 44, 119, 33, 8
   CONTROL "", 600, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 78, 292, 60, 11
   CONTROL "Base 1", 708, "Static", WS_GROUP, 44, 295, 23, 8
   CONTROL "", 601, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 172, 292, 45, 11
@@ -16677,12 +16679,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 623, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 324, 318, 45, 11
   CONTROL "", 624, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 370, 318, 60, 11
   CONTROL "R.E. 3", 716, "Static", WS_GROUP, 299, 321, 21, 8
-  CONTROL "Banco", -1, "Static", WS_GROUP, 454, 57, 30, 8
-  CONTROL "Cuenta", -1, "Static", WS_GROUP, 454, 69, 28, 8
+  CONTROL "Banco", -1, "Static", WS_GROUP, 446, 69, 30, 8
+  CONTROL "Cuenta", -1, "Static", WS_GROUP, 446, 81, 28, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Facturas rectificativas de proveedores", -1, "Static", WS_GROUP, 44, 3, 198, 8
   CONTROL "0", 403, "Static", SS_RIGHT|WS_GROUP, 560, 300, 100, 8
   CONTROL "Imp. especiales", -1, "Static", WS_GROUP, 503, 300, 54, 8
+  CONTROL "Alm. Origen", 342, "Static", WS_GROUP, 446, 45, 39, 8
 }
 
 RCTPRV_2 DIALOG DISCARDABLE 29, 33, 670, 375
