get comensales en tpv tactil

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -14459,9 +14459,8 @@ CAPTION "Punto de venta"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 59, 12, 170, 12
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 78, 34, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 133, 34, 50, 14
-  CONTROL "&Ayuda", 9, "Button", WS_TABSTOP, 188, 34, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 132, 34, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 187, 34, 50, 14
   CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 15, 27, 8
   CONTROL "Punto de venta", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 2, 2, 236, 27
 }
@@ -17571,11 +17570,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 120, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 70, 35, 163, 101
   CONTROL "", 130, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 70, 49, 163, 101
   CONTROL "", 140, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 70, 63, 163, 101
-  CONTROL "Solicitar comensales", 150, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 70, 79, 77, 10
+  CONTROL "Solicitar comensales al abrir ticket", 150, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 70, 79, 119, 10
   CONTROL "[F3] &Edición visual de sala de ventas", 503, "Button", WS_TABSTOP, 69, 92, 163, 14
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 78, 128, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 133, 128, 50, 14
-  CONTROL "&Ayuda", 9, "Button", WS_TABSTOP, 188, 128, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 133, 128, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 188, 128, 50, 14
   CONTROL "Código", -1, "Static", WS_GROUP, 5, 13, 27, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 5, 25, 27, 8
   CONTROL "Sala", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 2, 2, 236, 114
